# pizzaria

./: .editorconfig  .flake8  .gitignore  pyproject.toml
pizzaria/: bootstrap.py  server.py  settings.py
pizzaria/modules/core/: __init__.py  config.py  managers.py  models.py  querysets.py
pizzaria/modules/domain/: __init__.py  config.py  models.py
pizzaria/modules/product/: __init__.py  config.py  models.py
