[tool.poetry]
name = "pizzaria"
version = "0.1.0"
description = ""
authors = ["Tarcisio Cantalice <tarcisiocantalice@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.7"
psycopg2 = "^2.8.6"
django-environ = "^0.4.5"
gunicorn = "^20.1.0"
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
black = "^20.8b1"
flake8-django = "^1.1.1"

[tool.black]
line-length = 79


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
